fix-#33 Bookmark page's footer is out of place

--- a/src/popup/sass/layout/_footer.scss
+++ b/src/popup/sass/layout/_footer.scss
@@ -2,6 +2,10 @@ footer {
   height: 2.5rem;
   background-color: #242424;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  z-index: 10;
 }
 
 .footer-box {
